rough draft done.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="card main" class="main" id="styledText" style="position: relative;top: 110px;justify-items: center;
-      text-align: center;">
+      text-align: center;margin-bottom: 3%;">
 
 
         <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="15%" width="15%"
@@ -19,9 +19,13 @@
         <router-outlet></router-outlet>
 
       </div>
-
       <br /><br />
     </div>
+    <br /><br />
   </div>
+  <br /><br />
+
+
   <app-footer id="footer"></app-footer>
+
 </div>
