--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,6 +17,17 @@
         <br>
         - Grow TOON ecosytem by launchpadding other projects with ART and DEV work.
       </p>
+      <h4>
+        <button id="styled-mint-button" style="margin: 1%;"> <a style="margin: 10%;"
+            href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code" style="margin: 10px;">View
+            Contract</a></button>
+        <button id="styled-mint-button" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios"
+            style="margin: 10px">View
+            Opensea</a></button>
+        <button id="styled-mint-button" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View
+            Rarible</a></button>
+    
+      </h4>
     </div>
       <div class="card" id="card-mintDevilCat">
         <div class="container">
@@ -106,7 +117,7 @@
       <br>
       <br>
   
-      <div class="container" id="text" style="width: auto;">
+      <div class="container" id="text" style="width: 85%;">
 
         <br>
         <br>
