--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="word-wrap: break-word;text-align: center;width: 90vw">
+<div class="container" style="word-wrap: break-word;text-align: center;width: 90vw;">
   <h3 id="styledText">Welcome to the DevilCatz Minting Page!</h3>
   <h4>
     <button id="styled-mint-button" style="margin: 1%;"> <a style="margin: 10%;"
