--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -1,4 +1,4 @@
-<div class="center-div" style="display: grid;justify-items: center;">
+<div class="center-div" style="display: grid;justify-items: center;margin-bottom: 20%;">
 
     <div class="card" style="border-radius: 5%; box-shadow: none;background: none; ">
 
@@ -97,7 +97,7 @@
         <br> <br>
       
 
-        <div id="card-lightblue" style="min-width: 75%;margin-bottom: 20%;">
+        <div id="card-lightblue" style="min-width: 75%;">
             <p> {{catObj.data.name}}
                 <br>
                 <br>
