need to make look up provider less.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
       <h3>
         Welcome to Toonverse Studios!
       </h3>
-      <p> A WEB3 Art development platfrom.<br>
+      <p> A WEB3 Art development platform.<br>
         Our Tokenomics are really simple.
         <br>
         - Mint a DevilCat
