dev: removed mint page since we are sold out: TODO: about team, roadmap.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,21 +31,23 @@
     </div>
       <div class="card" id="card-mintDevilCat">
         <div class="container">
-          <div class="card-body">        <h6>**MINTING NOW**</h6>
+          <div class="card-body">        <h6>**SOLD OUT**</h6>
 
             <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="40%" width="63%"
               style="border-radius: 5%" />
               <br>
               <br>
-              <p> The DevilCats Minting is taking place now.
-                <br> Currently
+              <p> The DevilCats Minting has officially sold out.
+
+                <br> Ironically on new years day 2023.
+                <br> We would like to thank the community as we continue this journey in the web3 space.
               </p>
               <p class="yellowHighlight">{{totalSupply}} Minted!</p>
               <p>out of</p>
               <p class="yellowHighlight">2222</p>
               <br> <p>Owning a DevilCatz token entitles you to future collection drops.</p> 
 
-              <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
+              <button id="navbar-text" class="styled">SOLD OUT!</button>
 
           </div>
         </div>
