--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -12,7 +12,8 @@
 
   </h4>
 
-  <p> The DevilCats Minting is taking place now.
+  <p> The DevilCats Offically Minted Out!
+    <br> New years day 2023, We would like to thank the community as we embark on this digital journey of whats next.
     <br> Currently
   </p>
   <p class="yellowHighlight">{{totalSupply}} Minted!</p>
