--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,16 +26,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" mdbCollapse #basicNavbar="mdbCollapse">
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li>
-          <p> <button (click)="basicNavbar.toggle()" id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat!</button>
+        <!-- <li>
+          <p> <button (click)="basicNavbar.toggle()" id="navbar-text"   class="styledDisabled" [routerLink]="['/mint']">Mint Closed!</button>
           </p>
-        </li>
+        </li> -->
         <li class="nav-item">
           <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/viewcatz']"> LookUp</p>
         </li>
 
         <li class="nav-item">
-          <p (click)="basicNavbar.toggle()" id="navbar-text" class="styled" [routerLink]="['/manage']">Login</p>
+          <p (click)="basicNavbar.toggle()" id="navbar-text" class="styled" [routerLink]="['/manage']">Staking</p>
         </li>
         
         <!-- <li class="nav-item" id="nav-item">
