--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -44,8 +44,8 @@
               </div>
 
               <div class="card-body">
-                <img id="gremlins-img" src="../../../assets/toonverse/DevilCatz/11.png" alt="logo" height="200vh"
-                  width="200vw" style="border-radius: 5%" />
+                <img id="gremlins-img" src="../../../assets/toonverse/DevilCatz/11.png" alt="logo" height="100%"
+                  width="100%" style="border-radius: 5%" />
               </div>
 
               <div class="card-text">
