--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -18,8 +18,8 @@
                     max-width: 350px;
                     margin-left: auto;
                     margin-right: auto;">
-                    <p>Eth Address <br>Lookup</p>
-
+                    <p>Eth Address</p>
+                    <p>Lookup</p>
                     <mdb-form-control>
                         <input mdbInput (ngModelChange)="updateSearchedAddress($event)" [ngModel]="searchedAddress"
                             type="text" id="typeText" class="styled" placeholder="Eth Address" /><br>
@@ -36,8 +36,8 @@
                     max-width: 350px;
                     margin-left: auto;
                     margin-right: auto;">
-                    <p>DevilCat ID# Lookup</p>
-
+                    <p>DevilCat ID#</p>
+                    <p>Lookup</p>
                     <mdb-form-control>
                         <input mdbInput (ngModelChange)="updateSearchedID($event)" [ngModel]="searchedId" type="number"
                             min="0" max="2222" id="typeText" placeholder="DevilCatID#" class="styled" /><br>
@@ -72,11 +72,18 @@
                         style="border-radius: 5%" />
                         <br>
                         <br>
-                        <a
+                        <a style="margin: 5px"
                         href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{token.data.edition}}">
                         <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh" width="25vw"
                             style="border-radius: 5%" />
                     </a>
+                    <a style="margin: 5px"
+                    href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{token.data.edition}}?tab=overview">
+                    <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
+                        style="border-radius: 5%" />
+                </a>
+
+
                     <br>
                     <br>
                 </div>
@@ -105,9 +112,15 @@
                     style="border-radius: 5%" />
                     <br>
                     <br>
-                    <a
+                    <a style="margin: 5px"
                     href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{catObj.data.edition}}">
                     <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh" width="25vw"
+                        style="border-radius: 5%" />
+                </a>
+
+                <a style="margin: 5px"
+                href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{catObj.data.edition}}?tab=overview">
+                    <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
                         style="border-radius: 5%" />
                 </a>
 
