--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -1,125 +1,75 @@
 <div class="center-div">
   <div class="card-header" style="border-radius: 5%;">
-    <br>
     <h6 style="font-weight: bold; "><u>**Devil Cat Staking**</u> </h6>
-    <br>
 
-    <!-- <p>Below is a rough basic GUI we will be implementing. <br>
-      <br>
-      We will be releasing the tokenzation of DevilCatz and staking.
-      Future airdrops will be paid in DevilCatz homegrown token to mint future collections.
-      <br> -->
-
-    <!-- </p> -->
     <h3 class="card-text" style="font-size: 2em">
       <br>
 
     </h3>
 
     <div *ngIf="this.isLoading">
-      <div class="spinner-grow" style="width: 10em; height: 10em; color: #f0b90b" role="status">
-        <span class="visually-hidden">Loading...</span>
+      <div >
+        <img id="center-img" src="../../../assets/toonverse/catCoin.gif"
+        alt="logo" height="200vh" width="150" />
+        <span class="visually-hidden">...</span>
       </div>
       <br />
-      <br />
-      <br />
-
-      <p style="font-size: 1.25em; color: #f0b90b">Loading...</p>
+      <p style="font-size: 1.25em; color: #f0b90b">Please finish transaction <br> or <br>wait for blokchain to confirm...
+      <br>
+    The page will referesh on its own.</p>
       <br />
     </div>
 
     <div *ngIf="!this.isLoading">
       <br>
+      <div *ngIf="this.userAddress == ''" style="position: relative; top: -90px;">      <br>
+        <p>Please login to access these features.</p>
+        <button (click)="this.getContent()" class="styled" style="max-width: none;">
+          Connect MetaMask
+        </button>
+        <br>
+        <button class="styled" style="margin: 1%;"> <a style="margin: 10%;"
+          href="https://etherscan.io/token/0x61DED8A72cDc7762D159ab46bE880BE7127A2DeF#code" style="margin: 10px;">View
+          Contract</a></button>
+          <br>
+          <br>
+        <img id="center-img-gif" src="../../../assets/toonverse/devilCatCode.png" alt="logo" height="40%" width="63%"
+        style="border-radius: 5%" />  </div>
+      </div>
 
       <!-- IF USER IS LOGGGGGGEDDD IN-->
       <div *ngIf="this.userAddress != ''" style="position: relative; top: -90px;">
 
         <p>Welcome "{{ userAddress }}"!
+
+          <br>
+          $TOON IN WALLET :{{erc20Owned}} <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo"
+            height="25vh" width="25" />
+          <br>
+          UNCLAIMED $TOON :{{erc20Unclaimed}} <img id="center-img" src="../../../assets/toonverse/catCoin.gif"
+            alt="logo" height="25vh" width="25" />
           <br>
           TOATAL UNSTAKED DEVILCATZ :{{unstakedJsonArray.length}}
           <br>
           TOATAL STAKED DEVILCATZ :{{stakedJsonMap.size}}
           <br>
-          <br>
-          $TOON IN WALLET :{{erc20Owned}}
-          <br>
-          UNCLAIMED $TOON :{{erc20Unclaimed}}
 
-
-        <!-- <p>Claimed TOONCOIN : 2500 <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo"
-            height="25vh" width="25" style="border-radius: 5%" />
-          <br>
-          Unclaimed TOONCOIN : test
-           {{erc20Unclaimed}} 
-          <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25"
-            style="border-radius: 5%" />
-
-        </p> -->
-
-        <!-- Your {{ contractSymbol }} : {{ tokensOwned }}
-          <br />
-          Staked {{ contractSymbol }} : {{ tokensStaked }} -->
-        <div class="container" id="unstaked" style="background-color: rgb(236, 230, 230)">
-          <h3>UNSTAKED DEVILCATZ : {{unstakedJsonArray.length}}</h3>
-          <div class="row" style="margin-bottom: 20px;">
-                
-            <div *ngIf="erc721OwnedSelectedToStake.size !=0" class="col-sm">
-              <button class="styled" (click)="stakeSelectedNfts()">
-                Stake Selected {{erc721OwnedSelectedToStake.size}}
-              </button>
-            </div>
-
-            <div class="col-sm">
-              <button class="styled" (click)="stakeAllNfts()">
-                <!-- STAKE ALL {{erc721Owned}} -->
-                Stake All {{unstakedJsonArray.length}}
-
-              </button>
-            </div>
-          </div>
-
-
-          <div class="row">
-            <div class="col-sm" *ngFor="let token of unstakedJsonArray;">
-                <div class="card-body" id="styled">
-                  <p class="card-text" style="font-size: 1em">
-                    {{token.data.name}}
-                  </p>
-
-                  <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
-                    style="border-radius: 5%" />
-                  <br>
-                  <br>
-
-                  <button (click)="stakeSingleNft(token.data.edition)" class="styled">Stake</button>
-                  <br>
-                  <br>
-                  <input mdbCheckbox  (click)="updateCatsToStakeMap(token.data.edition)" style="border-color: pink; text-decoration: black;" class="form-check-input"
-                    type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br>
-
-      <div class="container" id="staked" style="position: relative;top: -90px; background-color: rgb(198, 195, 195);">
+      <div class="container" id="staked" style="background-color: rgb(198, 195, 195); margin-bottom: 15px;">
         <h3>STAKED DEVILCATZ : {{stakedJsonMap.size}}</h3>
 
-        <div class="row" style="margin-bottom: 20px;">
+        <div class="row " style="margin-bottom: 20px;justify-content: center;">
 
           <div class="col-md">
-            <button class="styled" (click)="collectAllRewards()">
+            <button class="styled" style="max-width: none;" (click)="collectAllRewards()">
               Collect All {{erc20Unclaimed}}
               <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25"
                 style="border-radius: 5%" />
             </button>
           </div>
-          <div  *ngIf="erc20UnclaimedSelected!=0"  class="col-md">
-            <button (click)="collectSelectedRewards()" class="styled" style="min-width: fit-content;">
-              Collect Selected {{erc20UnclaimedSelected}}
-              <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25"
-                 />
+          <div *ngIf="erc20UnclaimedSelected!=0" class="col-md">
+            <button (click)="collectSelectedRewards()" class="styled" style="min-width: fit-content; max-width: none;">
+              Collect {{erc20UnclaimedSelected}}
+              <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25" />
             </button>
           </div>
 
@@ -130,7 +80,7 @@
           </div>
           <div *ngIf="erc721StakedSelectToUnStake.size!=0" class="col-md">
             <button (click)="unstakeMultipleNfts()" class="styled">
-              Unstake Selected {{erc721StakedSelectToUnStake.size}}
+              Unstake {{erc721StakedSelectToUnStake.size}}
             </button>
           </div>
         </div>
@@ -138,35 +88,99 @@
         <div class="row">
 
           <div class="col-sm" *ngFor="let token of stakedJsonMap | keyvalue">
-              <div class="card-body" id="styled">
-                <p class="card-text" style="font-size: 1em">
-                  {{token.value.data.name}}
-                </p>
+            <div class="card-body" id="styled">
+              <p class="card-text" style="font-size: 1em">
+                {{token.value.data.name}}
+              </p>
 
-                <img id="center-img" src={{token.value.data.image}} alt="logo" height="100vh" width="100"
-                  style="border-radius: 5%" />
+              <img id="center-img" src={{token.value.data.image}} alt="logo" height="100vh" width="100"
+                style="border-radius: 5%" />
+              <br>
+              <br>
+              <p>{{token.value.data.rewards}}<img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo"
+                  height="25vh" width="25" style="border-radius: 5%" /></p>
+              <button (click)="collectNftReward(token.value.data.edition)" class="styled">
+                Collect
+              </button>
+              <br> <button (click)="unstakeNft(token.value.data.edition)" class="styled">Unstake</button>
+              <br>
+              <div>
                 <br>
-                <br>
-                <p>{{token.value.data.rewards}}<img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh"
-                    width="25" style="border-radius: 5%" /></p>
-                <button (click)="collectNftReward(token.value.data.edition)" class="styled">
-                  Collect
-                </button>
-                <br> <button (click)="unstakeNft(token.value.data.edition)" class="styled">Unstake</button>
-                <br>
-                <div>
-                  <br>
-                  <input mdbCheckbox (click)="updateCatsToUnstakeMap(token.value.data.edition)"  style="border-color: pink; text-decoration: black;" class="form-check-input"
-                    type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                </div>
-
-
+                <input mdbCheckbox (click)="updateCatsToUnstakeMap(token.value.data.edition)"
+                  style="border-color: pink; text-decoration: black;" class="form-check-input" type="checkbox"
+                  id="checkboxNoLabel" value="" aria-label="..." />
               </div>
+
+
+            </div>
 
           </div>
         </div>
       </div>
 
+      <div class="container" id="unstaked" style="background-color: rgb(236, 230, 230); margin-bottom: 30px;">
+        <h3>UNSTAKED DEVILCATZ : {{unstakedJsonArray.length}}</h3>
+        <div class="row" style="margin-bottom: 20px;">
+
+          <div *ngIf="erc721OwnedSelectedToStake.size !=0" class="col-sm">
+            <button class="styled" (click)="stakeSelectedNfts()">
+              Stake Selected {{erc721OwnedSelectedToStake.size}}
+            </button>
+          </div>
+
+          <div class="col-sm">
+            <button class="styled" (click)="stakeAllNfts()">
+              <!-- STAKE ALL {{erc721Owned}} -->
+              Stake All {{unstakedJsonArray.length}}
+
+            </button>
+          </div>
+        </div>
+
+
+        <div class="row justify-content-center">
+          <div class="col-md" *ngFor="let token of unstakedJsonArray;">
+
+            <div id="styled" class="card-body" style="max-width: none;">
+              <p class="card-text" style="font-size: 1em">
+                {{token.data.name}}
+              </p>
+
+              <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
+                style="border-radius: 5%" />
+
+              <br>
+              <br>
+              <a style="margin: 5px"
+                href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{token.data.edition}}">
+                <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh" width="25vw"
+                  style="border-radius: 5%" />
+              </a>
+
+              <a style="margin: 5px; margin-bottom: 5px;"
+                href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{token.data.edition}}?tab=overview">
+                <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
+                  style="border-radius: 5%" />
+              </a>
+
+
+
+              <br>
+              <br>
+
+              <button (click)="stakeSingleNft(token.data.edition)" class="styled">Stake</button>
+              <br>
+              <br>
+              <input mdbCheckbox (click)="updateCatsToStakeMap(token.data.edition)"
+                style="border-color: pink; text-decoration: black;" class="form-check-input" type="checkbox"
+                id="checkboxNoLabel" value="" aria-label="..." />
+              <br>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
-  </div>
+
+
 </div>
