--- a/src/app/components/manage/manage.component.scss
+++ b/src/app/components/manage/manage.component.scss
@@ -4,26 +4,42 @@
   margin-left: auto;
   margin-right: auto;
   min-height: 275px;
-
   border: 0;
-  // line-height: 2.5;
-  // // padding: 0 20px;
-  // font-size: 1rem;
-  // text-align: center;
   color: black;
   text-shadow: 1px 1px 1px #000;
   border-radius: 10px;
   background-color: aliceblue;
-  // background-image: linear-gradient(to top left,
-  //     rgba(0, 0, 0, 0.2),
-  //     rgba(0, 0, 0, 0.2) 30%,
-  //     rgba(0, 0, 0, 0));
-  // box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+
 }
+
+#styled-mint-button {
+  margin-bottom: 4px;
+  border: 0;
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: black;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: pink;  
+}
+
+#styled-mint-button:hover {
+  box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+}
+
+
 
 #styled-manage {
   margin: 5px;
 }
+.col-md{
+  flex: none;
+  min-width: 225px;
+  max-width: 248px;
+}
+
 
 #manageCard {
   width: 95%;
@@ -79,6 +95,23 @@
     inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
 
+#card-lightblue-multi{
+  background-color: aliceblue;
+  border-radius: 5%;
+  max-width: 60%;
+  width: auto;
+  margin: auto;
+  margin-bottom: 5%;
+}
+
+
+#card-lightblue-multi:hover{
+  background-color: bisque;
+  border-radius: 5%;
+  transform: scale(1.05);
+  text-decoration: underline;
+
+}
 
 
 //   #card-lightblue{
