--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -66,7 +66,7 @@
 
         <div id="container" style="padding-bottom: 20%;">
             <div class="row">
-                <div class="col-md-3" id="card-lightblue-multi" *ngFor="let token of tokenJsonArray">
+                <div class="col-md-3" style="width: 20%;" id="card-lightblue-multi" *ngFor="let token of tokenJsonArray">
                     <p>{{token.data.name}}</p>
                     <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
                         style="border-radius: 5%" />
