--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -1,30 +1,28 @@
 <div class="center-div">
   <div class="card-header" style="border-radius: 5%;">
-    <h6 style="font-weight: bold; "><u>**Devil Cat Staking**</u> </h6>
-
+    <h6 style="font-weight: bold; "><u>**Devil Catz Staking**</u> </h6>
+    <button class="styled" style="margin: 1%;"> <a style="margin: 10%;"
+      href="https://etherscan.io/token/0x61DED8A72cDc7762D159ab46bE880BE7127A2DeF#code" style="margin: 10px;">View
+      Contract</a></button>
     <h3 class="card-text" style="font-size: 2em">
       <br>
 
     </h3>
 
-    <div *ngIf="!this.isLoading">
 
       <br>
       <div *ngIf="this.userAddress == ''" style="position: relative; top: -45px;">
+        <div class="card-body" id="styled" style="min-height: 0px;">
+
         <button (click)="connectAndGetStats()" class="styled" style="max-width: none;">
           Login
         </button>
-        <p>Please login to access these features.</p>
-        <br>
-        <button class="styled" style="margin: 1%;"> <a style="margin: 10%;"
-            href="https://etherscan.io/token/0x61DED8A72cDc7762D159ab46bE880BE7127A2DeF#code" style="margin: 10px;">View
-            Contract</a></button>
-        <br>
+        <p>Please login to access staking page.</p>
         <br>
         <img id="center-img-gif" src="../../../assets/toonverse/devilCatCode.png" alt="logo" height="40%" width="63%"
           style="border-radius: 5%" />
+        </div>
       </div>
-    </div>
 
     <!-- IF USER IS LOGGGGGGEDDD IN-->
     <div *ngIf="this.userAddress != ''" style="position: relative; top: -45px;">
@@ -74,19 +72,25 @@
 
 
 
-        <div *ngIf="!this.isLoading">
+      <div *ngIf="stakedJsonMap.size == 0 && !isLoading">
 
           <h3> No staked DevilCatz Found.</h3>
-          <p> Please stake to continue!</p>
-          <br>
+          <p><img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo"
+            height="25vh" width="25" />Please stake to earn $TOON!<img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo"
+              height="25vh" width="25" />
+          </p>
 
           <img id="center-img" src="../../../assets/toonverse/multiBanner.png" alt="logo" height="50%" width="50%"
             style=" margin-bottom: 20px;" />
           <br>
           <br>
         </div>
+
+
       </div>
-      <div *ngIf="stakedJsonMap.size == 0">
+
+      <div *ngIf="!this.isLoading">
+
         <hr>
 
 
@@ -158,69 +162,90 @@
         </div>
       </div>
 
+
+
+      <!-- UNSTAKED DEVILCATZ-->
       <div class="container" id="unstaked" style="margin-bottom: 30px;">
         <div *ngIf="!this.isLoading">
 
+          <div *ngIf="unstakedJsonArray.length > 0">
 
-          <h3>UNSTAKED DEVILCATZ : {{unstakedJsonArray.length}}</h3>
-          <div class="row" style="margin-bottom: 20px;">
+            <h3>UNSTAKED DEVILCATZ : {{unstakedJsonArray.length}}</h3>
+            <div class="row" style="margin-bottom: 20px;">
 
-            <div *ngIf="erc721OwnedSelectedToStake.size !=0" class="col-sm">
-              <button class="styled" (click)="stakeSelectedNfts()">
-                Stake Selected {{erc721OwnedSelectedToStake.size}}
-              </button>
+              <div *ngIf="erc721OwnedSelectedToStake.size !=0" class="col-sm">
+                <button class="styled" (click)="stakeSelectedNfts()">
+                  Stake Selected {{erc721OwnedSelectedToStake.size}}
+                </button>
+              </div>
+
+              <div class="col-sm">
+                <button class="styled" (click)="stakeAllNfts()">
+                  <!-- STAKE ALL {{erc721Owned}} -->
+                  Stake All {{unstakedJsonArray.length}}
+
+                </button>
+              </div>
             </div>
 
-            <div class="col-sm">
-              <button class="styled" (click)="stakeAllNfts()">
-                <!-- STAKE ALL {{erc721Owned}} -->
-                Stake All {{unstakedJsonArray.length}}
 
-              </button>
+            <div class="row justify-content-center">
+              <div class="col-md" *ngFor="let token of unstakedJsonArray;">
+                <div class="card-body" id="styled">
+
+                  <p class="card-text" style="font-size: 1em">
+                    {{token.data.name}}
+                  </p>
+
+                  <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
+                    style="border-radius: 5%" />
+
+                  <br>
+                  <br>
+                  <a style="margin: 5px"
+                    href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{token.data.edition}}">
+                    <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh" width="25vw"
+                      style="border-radius: 5%" />
+                  </a>
+
+                  <a style="margin: 5px; margin-bottom: 5px;"
+                    href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{token.data.edition}}?tab=overview">
+                    <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
+                      style="border-radius: 5%" />
+                  </a>
+
+
+
+                  <br>
+                  <br>
+
+                  <button (click)="stakeSingleNft(token.data.edition)" class="styled">Stake</button>
+                  <br>
+                  <br>
+                  <input mdbCheckbox (click)="updateCatsToStakeMap(token.data.edition)"
+                    style="border-color: pink; text-decoration: black;" class="form-check-input" type="checkbox"
+                    id="checkboxNoLabel" value="" aria-label="..." />
+                  <br>
+                </div>
+              </div>
             </div>
           </div>
-
-
-          <div class="row justify-content-center">
-            <div class="col-md" *ngFor="let token of unstakedJsonArray;">
-              <div class="card-body" id="styled">
-
-              <p class="card-text" style="font-size: 1em">
-                {{token.data.name}}
-              </p>
-
-              <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
+          <div *ngIf="unstakedJsonArray.length == 0">
+            <h3> No DevilCatz in your wallet</h3>
+            <p> An official genisis Toonverse DevilCat can be purchaed after market below.</p>
+            <a style="margin: 5px" href="https://opensea.io/collection/toonversestudios">
+              <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="35vh" width="35vw"
                 style="border-radius: 5%" />
-
-              <br>
-              <br>
-              <a style="margin: 5px"
-                href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{token.data.edition}}">
-                <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh" width="25vw"
-                  style="border-radius: 5%" />
-              </a>
-
-              <a style="margin: 5px; margin-bottom: 5px;"
-                href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{token.data.edition}}?tab=overview">
-                <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
-                  style="border-radius: 5%" />
-              </a>
-
-
-
-              <br>
-              <br>
-
-              <button (click)="stakeSingleNft(token.data.edition)" class="styled">Stake</button>
-              <br>
-              <br>
-              <input mdbCheckbox (click)="updateCatsToStakeMap(token.data.edition)"
-                style="border-color: pink; text-decoration: black;" class="form-check-input" type="checkbox"
-                id="checkboxNoLabel" value="" aria-label="..." />
-              <br>
-            </div>
+            </a>
+            <a style="margin: 5px" href="https://rarible.com/toonverseStudios/items">
+              <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="35vh" width="35vw"
+                style="border-radius: 5%" />
+            </a>
+            <br>
+            <img id="center-img" src="../../../assets/toonverse/DevilCats.png" alt="openseaLogo" height="25%" width="25%"
+            style="border-radius: 5%; margin-top: 40px;" />
           </div>
-        </div>
+
         </div>
 
       </div>
